# Project_web

./: .env.example  .gitignore  README.md  changes.txt  main.py  models.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
instagram-backend/src/: api.py  database.py  db.sql  main.py
instagram-backend/src/auth/: models.py  service.py  views.py
migrations/: env.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: images.py  qr_code.py  ratings.py  tags.py  users.py
src/routes/: admin.py  auth.py  comments.py  images.py  ratings.py  users.py  utils.py
src/services/: auth.py  email.py
src/templates/: index.html
src/utils/: image_utils.py  qr_code.py  users.py
tests/: conftest.py  imagetest.py  test_repository_images.py  test_repository_ratings.py  test_repository_tags.py  test_repository_users.py  test_route_admin.py  test_route_auth.py  test_route_comments.py  test_route_images.py  test_route_users.py  test_services_email.py  test_unit_repository_qr_code.py  test_unit_services_auth.py  test_unit_utils_image_utils.py  test_unit_utils_qr_code.py
