[tool.poetry]
name = "project-web"
version = "0.1.0"
description = ""
authors = ["Daiquiri club"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
qrcode = "^7.4.2"
cloudinary = "^1.40.0"
pydantic-settings = "^2.2.1"
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "3.1.7"
jinja2 = "^3.1.4"
pytest-cov = "^5.0.0"
pyproject-toml = "^0.0.10"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
email-validator = "^2.1.1"
aioconsole = "^0.7.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
